--- a/Vidya_WP_Pr_Ass1/q5.html
+++ b/Vidya_WP_Pr_Ass1/q5.html
@@ -17,8 +17,8 @@ Display your name in Bold, address in Italics and year as S.Y. -->
  <h1>My Assignment</h1>
 </center>
 <hr>
- <p><b>Name:Sneha Arumugam</b></p>
- <p><i>Address:Sangvi</i></p>
+ <p><b>Name:Yashh Kale</b></p>
+ <p><i>Address:Pimprt</i></p>
  <p><i>Class:SYBCA</i></p>
  </body>
 </html>
